--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -71,6 +71,12 @@
                         </label>
                     </div>
                 </div>
+                <div class="input-container" style="display: flex; justify-content: center;">
+                    <ngx-recaptcha2 #captchaElem
+                        [siteKey]="siteKey"
+                        formControlName="recaptcha">
+                    </ngx-recaptcha2>
+                </div>
                 <button class="signup-btn" [disabled]="formSignup.pristine || formSignup.invalid">{{'stay.login.sign-up' | translate}}</button>
             </form>
             <p>{{getTranslation('orSignWith')}}</p>
@@ -117,6 +123,12 @@
                     <div *ngIf="formLogin.controls['password'].errors?.['pattern']">
                         {{getTranslation('requiredPasswordLength')}}
                     </div>
+                </div>
+                <div class="input-container" style="display: flex; justify-content: center;">
+                    <ngx-recaptcha2 #captchaElem
+                        [siteKey]="siteKey"
+                        formControlName="recaptcha">
+                    </ngx-recaptcha2>
                 </div>
                 <!-- <button type="button" class="signup-btn demo" (click)="onSignDemo()">{{getTranslation('signInDemo')}}</button> -->
                 <button class="signup-btn" [disabled]="formLogin.pristine || formLogin.invalid">{{getTranslation('signIn')}}</button>
