--- a/src/app/cmps/site-map/site-map.component.html
+++ b/src/app/cmps/site-map/site-map.component.html
@@ -1,4 +1,13 @@
 <app-header></app-header>
+<style>
+    .texto {
+        position: relative; /* o absolute, fixed */
+        top: 40px; /* ajusta el valor según lo que necesites */
+        left: 60px; /* ajusta el valor según lo que necesites */
+        color: rgb(192, 192, 192);
+    }
+  </style>
+  <div class="texto"><a [routerLink]="['']">Home/</a><a >Site Map</a></div>
 <div class="container">
 <img src="../../../assets/img/user/tudepa.jpg" width="100px" 
 height="700px" alt="Mapa del sitio">
