--- a/src/app/cmps/pagina-error/pagina-error.component.html
+++ b/src/app/cmps/pagina-error/pagina-error.component.html
@@ -1,10 +1,19 @@
-<h1>404 Error Page #1</h1>
-<p class="zoom-area"><b>CSS</b> animations to make a cool 404 page. </p>
+<style>
+  .texto {
+      position: relative; /* o absolute, fixed */
+      top: -30px; /* ajusta el valor según lo que necesites */
+      left: -140px; /* ajusta el valor según lo que necesites */
+      color: rgb(192, 192, 192);
+  }
+</style>
+<div class="texto"><a [routerLink]="['']">Home/</a><a >Error 404</a></div>
+<h1>Error 404 page not found</h1>
+<p class="zoom-area"><b>404</b> The page was not found, contact customer service </p>
 <section class="error-container">
   <span><span>4</span></span>
   <span>0</span>
   <span><span>4</span></span>
 </section>
 <div class="link-container">
-  <a target="_blank" href="https://www.silocreativo.com/en/creative-examples-404-error-css/" class="more-link">Visit the original article</a>
+  <a target="_blank" [routerLink]="['']" class="more-link">Back to Home</a>
 </div>
