--- a/src/app/cmps/user-stays/user-stays.component.html
+++ b/src/app/cmps/user-stays/user-stays.component.html
@@ -1,3 +1,13 @@
+<style>
+      .texto {
+          position: relative; /* o absolute, fixed */
+          top: -30px; /* ajusta el valor según lo que necesites */
+          left: -140px; /* ajusta el valor según lo que necesites */
+          color: rgb(192, 192, 192);
+      }
+    </style>
+    <div class="texto"><a [routerLink]="['']">Home/</a><a >My Depas</a></div>
+
 <section *ngIf="userStays?.length" class="user-stays">
       <div class="stays">
             <div class="titles">
