--- a/src/app/cmps/user-trips/user-trips.component.html
+++ b/src/app/cmps/user-trips/user-trips.component.html
@@ -1,3 +1,13 @@
+<style>
+    .texto {
+        position: relative; /* o absolute, fixed */
+        top: -30px; /* ajusta el valor según lo que necesites */
+        left: -140px; /* ajusta el valor según lo que necesites */
+        color: rgb(192, 192, 192);
+    }
+  </style>
+  <div class="texto"><a [routerLink]="['']">Home/</a><a >My Trips Request</a></div>
+
 <section *ngIf="ordersToShow.length || orderFilter.term" class="user-trips">
     <div class="user-header">
         <h2 typingAnimation *ngIf="!isSearchActive">Hi {{user.fullname}}, you have {{orders.length}} trips</h2>
