--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,13 @@
+<style>
+    .texto {
+        position: relative; /* o absolute, fixed */
+        top: 120px; /* ajusta el valor según lo que necesites */
+        left: 50px; /* ajusta el valor según lo que necesites */
+        color: rgb(192, 192, 192);
+    }
+  </style>
+  <div class="texto"><a [routerLink]="['']">Home/</a><a >Login</a></div>
+
 <section class="login-page">
     <div class="logo" routerLink="/">
         <img src="../../../assets/img/user/logo.jpg" alt="">
