--- a/src/app/pages/stay-details/stay-details.component.html
+++ b/src/app/pages/stay-details/stay-details.component.html
@@ -1,3 +1,13 @@
+<style>
+  .texto {
+      position: relative; /* o absolute, fixed */
+      top: 140px; /* ajusta el valor según lo que necesites */
+      left: 50px; /* ajusta el valor según lo que necesites */
+      color: rgb(192, 192, 192);
+  }
+</style>
+<div class="texto"><a [routerLink]="['']">Home/</a><a >Details</a></div>
+
 <section [ngClass]="isReserveClick ? 'reserve-click ' : ''" class="stay-details">
   <app-header [isShowFilter]="false"></app-header>
   <div class="main-layout">
