--- a/src/app/pages/stay-index/stay-index.component.html
+++ b/src/app/pages/stay-index/stay-index.component.html
@@ -1,3 +1,13 @@
+<style>
+  .texto {
+      position: relative; /* o absolute, fixed */
+      top: 120px; /* ajusta el valor según lo que necesites */
+      left: 60px; /* ajusta el valor según lo que necesites */
+      color: rgb(192, 192, 192);
+  }
+</style>
+<div class="texto">Home</div>
+
 <section class="stay-index">
   <app-header [isShowFilter]="true"></app-header>
   <main *ngIf="!this.loader.getLoading() || isLoadStay" class="main-layout">
